--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -5,3 +5,12 @@ h1 {
 .colorbutton {
     color: black;
 }
+
+.padding-col {
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+.head-size {
+    font-size: xx-large;
+}
