--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -14,3 +14,16 @@ h1 {
 .head-size {
     font-size: xx-large;
 }
+
+.social-box {
+    background-color: #d8dfea;
+}
+
+.bold, h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+}
+
+.small, .text--small, label.small, small {
+    font-size: 13px;
+    line-height: 1.6;
+}
