--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -7,8 +7,8 @@ h1 {
 }
 
 .padding-col {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 
 .head-size {
@@ -30,4 +30,5 @@ h1 {
 
 .align-box {
     margin-top: 40px;
+    margin-bottom: 40px;
 }
