--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -32,3 +32,16 @@ h1 {
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
+.logo {
+  height: 400px;
+  width: 400px;
+}
+
+.login-wrapper{
+    .btn.btn-primary{
+        background-color: purple;
+    }
+
+
+}
