--- a/src/styles/signupmodal.scss
+++ b/src/styles/signupmodal.scss
@@ -9,8 +9,7 @@
     font-size: 11px;
 }
 
-.birthday-wrapper {
+.heading-wrapper {
     color: #777;
-    font-size: 16px;
-    margin-top: 10px;
+    font-size: 14px;
 }
