--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -34,9 +34,8 @@ h1 {
 }
 
 .logo {
-  height: 400px;
-  width: 400px;
-}
+  height: 200px;
+  width: 400px;}
 
 .bg-coral {
     background: lightcoral;
